unpackaged/main/default/objects/GC_GES_Connect2_Settings__c/GC_GES_Connect2_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>GES Connect2 Custom Settings to be used for the Application.</description>
    <label>GES Connect2 Settings</label>
</CustomObject>