unpackaged/main/default/objects/GC_GES_Connect2_Settings__c/fields/API_ENDPOINT__c.field-meta.xml
<CustomField>
    <fullName>API_ENDPOINT__c</fullName>
    <description>Endpoint for Webservices.</description>
    <inlineHelpText>Endpoint for Webservices,</inlineHelpText>
    <label>API_ENDPOINT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>