unpackaged/main/default/objects/GC_GES_Connect2_Settings__c/fields/Default_Login_Email__c.field-meta.xml
<CustomField>
    <fullName>Default_Login_Email__c</fullName>
    <description>Default Login email for Testing.  Null for production.</description>
    <inlineHelpText>Default Login email for Testing.  Null for production.</inlineHelpText>
    <label>Default Login Email</label>
    <type>Email</type>
</CustomField>