unpackaged/main/default/objects/GC_GES_Connect2_Settings__c/fields/Send_Show_Org_Emails__c.field-meta.xml
<CustomField>
    <fullName>Send_Show_Org_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sends the show organizer emails upon order changes.</description>
    <inlineHelpText>Sends the show organizer emails upon order changes.</inlineHelpText>
    <label>Send Show Org Emails</label>
    <type>Checkbox</type>
</CustomField>