unpackaged/main/default/objects/GC_GES_Connect2_Settings__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Value used for the Name Mapping.</description>
    <inlineHelpText>Value used for the Name Mapping.</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>